--- a/BallControlSwift/Base.lproj/Main.storyboard
+++ b/BallControlSwift/Base.lproj/Main.storyboard
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="8YM-zF-f19">
-    <device id="retina4_7" orientation="landscape">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="8YM-zF-f19">
+    <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -15,18 +17,18 @@
             <objects>
                 <viewController id="BYZ-38-t0r" userLabel="ViewController" customClass="ViewController" customModule="BallControlSwift" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="667" height="375"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView hidden="YES" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ball" translatesAutoresizingMaskIntoConstraints="NO" id="3d7-a9-kSV">
-                                <rect key="frame" x="283.5" y="137.5" width="100" height="100"/>
+                            <imageView hidden="YES" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ballLogo" translatesAutoresizingMaskIntoConstraints="NO" id="3d7-a9-kSV">
+                                <rect key="frame" x="150" y="296" width="75" height="75"/>
+                                <color key="backgroundColor" red="0.17254901959999999" green="0.24313725489999999" blue="0.31372549020000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="100" id="XgN-SB-YA0"/>
-                                    <constraint firstAttribute="width" constant="100" id="hKW-SQ-AGo"/>
+                                    <constraint firstAttribute="width" secondItem="3d7-a9-kSV" secondAttribute="height" multiplier="1:1" id="IX6-3O-0x2"/>
                                 </constraints>
                             </imageView>
                             <textView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" bounces="NO" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" delaysContentTouches="NO" canCancelContentTouches="NO" minimumZoomScale="0.0" bouncesZoom="NO" editable="NO" usesAttributedText="YES" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="azA-Fb-bMa">
-                                <rect key="frame" x="160" y="124.5" width="347" height="126.5"/>
+                                <rect key="frame" x="40" y="263.5" width="295" height="140.5"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <attributedString key="attributedText">
                                     <fragment content="Wellcome to Ball Control!">
@@ -244,6 +246,7 @@ press Connect to get started</string>
                             <constraint firstItem="azA-Fb-bMa" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="MaA-CD-6hd"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="azA-Fb-bMa" secondAttribute="trailing" constant="200" id="VMX-FP-aj9"/>
                             <constraint firstItem="3d7-a9-kSV" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="VdH-Ry-FhA"/>
+                            <constraint firstItem="3d7-a9-kSV" firstAttribute="width" relation="lessThanOrEqual" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.2" id="fgR-CV-zhO"/>
                             <constraint firstItem="azA-Fb-bMa" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="160" id="kJV-MY-AiX"/>
                             <constraint firstItem="azA-Fb-bMa" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="40" id="llA-jN-ZKQ"/>
                             <constraint firstItem="3d7-a9-kSV" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="nNb-8e-OGC"/>
@@ -301,7 +304,7 @@ press Connect to get started</string>
                         <barButtonItem key="leftBarButtonItem" title="Connect" id="0SO-11-7xT">
                             <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <connections>
-                                <action selector="pressedConnect:" destination="BYZ-38-t0r" id="rXP-f7-bEf"/>
+                                <action selector="pressedConnect:" destination="BYZ-38-t0r" id="0Lu-GJ-o2S"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -321,7 +324,7 @@ press Connect to get started</string>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="8YM-zF-f19" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="EL6-Nl-X3R">
-                        <rect key="frame" x="0.0" y="0.0" width="667" height="32"/>
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="barTintColor" red="0.17254901960784313" green="0.24313725490196078" blue="0.31372549019607843" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <textAttributes key="titleTextAttributes">
@@ -342,6 +345,6 @@ press Connect to get started</string>
         </scene>
     </scenes>
     <resources>
-        <image name="ball" width="1165" height="1165"/>
+        <image name="ballLogo" width="192" height="26"/>
     </resources>
 </document>
